--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -60,6 +60,12 @@
         line-height: 0.95em;
         margin: 10px 0;
       }
+      h5.title {
+        margin-bottom: 0;
+      }
+      md-chip {
+        margin: 10px 0 0;
+      }
     }
     .map {
       width: 100%;
@@ -68,8 +74,9 @@
     }
     md-list {
       border-top: 1px $grey solid;
-      padding: 20px 5px;
-      &.flex-50 {
+      padding: 25px 5px;
+      &.key-facts {
+        padding: 20px 0;
         md-list-item {
           padding: 0;
           .md-list-item-text {
@@ -86,6 +93,13 @@
       md-list-item {
         padding: 0;
         min-height: 0;
+        img.reviewer {
+          float: right;
+          width: 64px;
+          height: 64px;
+          border-radius: 120px;
+          margin-top: 3px;
+        }
         img.md-avatar {
           margin-right: 10px;
         }
