--- a/src/elsie.home/styles/home.scss
+++ b/src/elsie.home/styles/home.scss
@@ -27,6 +27,12 @@
   // }
   .results {
     background-color: white;
+    md-progress-linear {
+      opacity: 0;
+      &.visible {
+        opacity: 1;
+      }
+    }
     md-list {
       padding-top: 1px;
     }
@@ -48,17 +54,9 @@
     > .main {
       width: 100%;
     }
-    &.focused {
-      &.expanded {
-        height: 42px;
-        input[type="text"] {
-          width: 100%;
-          margin: 1px 0 0;
-        }
-      }
-    }
     &.expanded {
       padding: 0;
+      height: 42px;
       input[type="text"] {
         width: 100%;
         margin: 1px 0 0;
