--- a/src/elsie.core/templates/master.jade
+++ b/src/elsie.core/templates/master.jade
@@ -1,21 +1,21 @@
 doctype
 .home
-  md-content(layout="row",layout-wrap,ng-class="{ locked: locked }")
-    .search(layout="column",layout-align="center center",ng-class="{ expanded: expanded, focused: focused }",flex="100")
+  md-content(layout="row",layout-wrap,ng-class="{ locked: locked }",scroll-position="position")
+    .search(layout="column",layout-align="center center",ng-class="{ expanded: expanded }",flex="100")
       .main(flex="80",layout="column",layout-align="center center")
-        h2.white(ng-if="!expanded") {{ welcome.text }}
-        input(type="text",placeholder="Search products and LCBO locations",ng-model="query",ng-change="search(query)",ng-model-options="{ debounce: 300 }",ng-focus="focus()")
+        h2.white(ng-show="!expanded") {{ welcome.text }}
+        input#search(type="text",placeholder="Search products and LCBO locations",ng-model="results.query",ng-keyup="search(results.query)",ng-focus="focus()")
         md-button.md-icon-button.hide(ng-class="{ visible: expanded }",ng-click="unfocus()")
-          md-icon close
-        h5.light.hint.white(ng-if="!expanded") Try "Pinot Noir" or "Saison"
-      .explore-trigger(flex="10",ng-if="!expanded")
+          md-progress-circular.md-accent(md-mode="indeterminate",ng-show="searching",md-diameter="20")
+          md-icon(ng-show="!searching") close
+        h5.light.hint.white(ng-show="!expanded") Try "Pinot Noir" or "Saison"
+      .explore-trigger(flex="10",ng-if="!expanded",ng-click="goExplore()",ng-show="!fadeTrigger",ng-class="{ invisible: !picks }")
         h4.white Need some inspiration?
         md-icon.white keyboard_arrow_down
     .results(ng-if="expanded",layout-fill)
       md-content(flex="100")
-        md-progress-linear.md-accent(md-mode="indeterminate",ng-class="{ visible: searching }")
-        md-tabs(md-dynamic-height,md-stretch-tabs="always",md-swipe-content="true")
-          md-tab(label="Products",md-on-select="modeSelect('products')")
+        md-tabs(md-stretch-tabs="always",md-selected="results.mode")
+          md-tab(label="Products",md-on-select="modeSelect(0)")
             md-list(ng-show="!searching")
               md-list-item.md-2-line(ng-repeat="product in results.products",ng-click="selectProduct(product)")
                 img.md-avatar(ng-src="{{ product.image_thumb_url }}")
@@ -24,13 +24,13 @@ doctype
                   p 
                     span.kwaf-pick(ng-show="product.pick.rating") kwäf
                     span {{ product.producer_name }}
-          md-tab(label="Stores",md-on-select="modeSelect('stores')")
+          md-tab(label="Stores",md-on-select="modeSelect(1)")
             md-list(ng-show="!searching")
               md-list-item.md-2-line(ng-repeat="store in results.stores",ng-click="selectStore(store)")
                 .md-list-item-text.md-3-line
-                  h3 {{ store.name }}
+                  h3 &#35;{{ store.store_no }} {{ store.name }}
                   p {{ store.address_line_1 }} &#183; {{ store.city }}
-    .explore(flex="100")
+    .explore(flex="100",ng-show="picks")
       .fancy-title
         img(src="img/icon_circle_wine.png")
         h4.md-accent.centered Latest kwäf wine picks
