update: implement velocity.js

--- a/src/elsie.common/styles/action-bar.scss
+++ b/src/elsie.common/styles/action-bar.scss
@@ -3,14 +3,18 @@ md-toolbar.action-bar {
   top: $bump;
   left: 0;
   right: 0;
+  opacity: 1;
   z-index: $z-index-control-main;
   background-color: $purple;
   color: $white;
   // &.purple {
   //   border-bottom: 1px solid rgba(0,0,0,0.1);
   // }
-  -webkit-transition: background-color $transition;
-  transition: background-color $transition;
+  -webkit-transition: background-color opacity $transition;
+  transition: background-color opacity $transition;
+  &.hidden {
+    opacity: 0;
+  }
   &.light {
     background-color: $white;
   }
