--- a/src/elsie.core/templates/master.jade
+++ b/src/elsie.core/templates/master.jade
@@ -1,20 +1,20 @@
 doctype
 .home
-  md-content(layout="row",layout-wrap,ng-class="{ locked: locked }",scroll-position="position")
-    .search(layout="column",layout-align="center center",ng-class="{ expanded: expanded }",flex="100")
-      .main(flex="80",layout="column",layout-align="center center")
-        h2.white(ng-show="!expanded") {{ welcome.text }}
-        input#search(type="text",placeholder="Search products and LCBO locations",ng-model="results.query",ng-keyup="search(results.query)",ng-focus="focus()")
-        md-button.md-icon-button.hide(ng-class="{ visible: expanded }",ng-click="unfocus()")
+  md-content#md-content(layout="row",layout-wrap,ng-class="{ locked: locked }")
+    .search#search-container(layout="column",layout-align="center center",flex="100",scroll-position="position",scroll-parent="md-content")
+      .main(layout="column",layout-align="center center")
+        h2.white#search-title.velocity-transition-opposites-fadeIn {{ welcome.text }}
+        input#search(type="text",placeholder="Search products and LCBO locations",ng-model="results.query",ng-focus="focus()",ng-model-options="{debounce: 350}")
+        md-button.md-icon-button(ng-show="expanded",ng-click="unfocus()",md-no-ink)
           md-progress-circular.md-accent(md-mode="indeterminate",ng-show="searching",md-diameter="20")
           md-icon(ng-show="!searching") close
-        h5.light.hint.white(ng-show="!expanded") Try "Pinot Noir" or "Saison"
-      .explore-trigger(flex="10",ng-if="!expanded",ng-click="goExplore()",ng-show="!fadeTrigger",ng-class="{ invisible: !picks }")
-        h4.white Need some inspiration?
-        md-icon.white keyboard_arrow_down
-    .results(ng-if="expanded",layout-fill)
+        h5.light.hint.white#search-hint.velocity-transition-opposites-fadeIn Try "Pinot Noir" or "Saison"
+        .explore-trigger.velocity-opposites-transition-slideUpIn(data-velocity-opts="{ duration: 350 }",ng-show="!expanded && picks",ng-click="goExplore()")
+          h4.white Need some inspiration?
+          md-icon.white keyboard_arrow_down
+    .results(ng-show="expanded && results.active",layout-fill)
       md-content(flex="100")
-        md-tabs(md-stretch-tabs="always",md-selected="results.mode")
+        md-tabs#tabs(md-stretch-tabs="always",md-selected="results.mode")
           md-tab(label="Products",md-on-select="modeSelect(0)")
             md-list(ng-show="!searching")
               md-list-item.md-2-line(ng-repeat="product in results.products",ng-click="selectProduct(product)")
@@ -30,7 +30,7 @@ doctype
                 .md-list-item-text.md-3-line
                   h3 &#35;{{ store.store_no }} {{ store.name }}
                   p {{ store.address_line_1 }} &#183; {{ store.city }}
-    .explore(flex="100",ng-show="picks")
+    .explore.velocity-transition-opposites-fadeIn#picks(flex="100",ng-show="picks.length > 4")
       .fancy-title
         img(src="img/icon_circle_wine.png")
         h4.md-accent.centered Latest kwäf wine picks
