--- a/src/elsie.core/templates/watchlist.jade
+++ b/src/elsie.core/templates/watchlist.jade
@@ -3,7 +3,7 @@ doctype
   md-content
     md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!watchlist && session")
     md-list.standalone(ng-show="watchlist && watchlist.length > 0")
-      md-list-item.md-2-line(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
+      md-list-item.md-2-line.velocity-transition-slideUpIn(data-velocity-opts="{ stagger: 150, duration: 350 }",ng-repeat="product in watchlist",ng-click="loadProduct(product)")
         img.md-avatar(ng-src="{{ product.image_thumb_url }}")
         .md-list-item-text
             h3 {{ product.name }}
@@ -12,7 +12,7 @@ doctype
               br
               span {{ product.secondary_category }} &#183; {{ product.alcohol_content | percentage }} &#183;
               span.accent &nbsp;{{ product.inventory_count | pretty }} units
-    .full(layout="column", layout-align="center center")
+    .full(layout="column", ng-show="error || !session || watchlist && watchlist.length === 0 && !error && session",layout-align="center center")
       div(flex,ng-if="error",layout="column", layout-align="center center")
         img.watchlist-image(src="img/watchlist.png")
         p.message {{ error.data }}
