--- a/src/index.jade
+++ b/src/index.jade
@@ -4,21 +4,21 @@ html
     meta(charset="utf-8")
     meta(name="viewport",content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width")
     title Elsie
+    // Velocity <3
+    script(src="js/lib/velocity.min.js",charset="utf-8")
+    script(src="js/lib/velocity.ui.min.js",charset="utf-8")  
     // Angular
     script(src="js/lib/angular.js",charset="utf-8")
     script(src="js/lib/angular-ui-router.js",charset="utf-8")
     script(src="js/lib/angular-animate.js",charset="utf-8")
+    script(src="js/lib/angular-velocity.js",charset="utf-8")
     script(src="js/lib/angular-aria.js",charset="utf-8")
     script(src="js/lib/store2.min.js",charset="utf-8")
     // Angular Material
     script(src="js/lib/angular-material.js",charset="utf-8")
     link(rel="stylesheet", href="css/lib/angular-material.css")
-    link(href="https://fonts.googleapis.com/icon?family=Material+Icons",rel="stylesheet")
     // Cordova 4.0.0
-    script(src="cordova.js",charset="utf-8")
-    // Fucking jQuery
-    script(src="js/lib/jquery.min.js",charset="utf-8")
-    script(src="http://cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js")
+    script(src="cordova.js",charset="utf-8")  
     // Elsie 2.0
     script(src="js/templates.js",charset="utf-8")
     script(src="js/elsie.js",charset="utf-8")
