--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -1,6 +1,6 @@
 doctype
-.product.single.overflow-parent(ng-style="image")
-  md-content.upper
+.product.single.overflow-parent#product(ng-style="image")
+  md-content.upper(scroll-position="position",scroll-parent="product")
     .image
     md-toolbar.lower
       .md-toolbar-tools
