--- a/src/elsie.store/templates/store.jade
+++ b/src/elsie.store/templates/store.jade
@@ -1,6 +1,6 @@
 doctype
-.product.store.single.overflow-parent(ng-style="image")
-  md-content.upper
+.product.store.single.overflow-parent#store(ng-style="image")
+  md-content.upper(scroll-position="position",scroll-parent="store")
     .image
     md-toolbar.lower
       .md-toolbar-tools
