--- a/src/elsie.core/styles/watchlist.scss
+++ b/src/elsie.core/styles/watchlist.scss
@@ -1,8 +1,11 @@
 .watchlist {
   background-color: $cream;
-  padding-top: 56px;
+  padding-top: $bump + 56px;
   width: 100%;
   height: 100%;
+  md-list {
+    margin-top: 0;
+  }
   .watchlist-image {
     width: 40%;
     margin: 20px 0;
@@ -15,6 +18,8 @@
   > md-content {
     height: 100%;
     background-color: $cream;
+    box-sizing: border-box;
+    padding-bottom: $bump + 56px;
   }
   md-progress-circular {
     margin: 40px auto 0;
