update: barcode scanner support, dynamic hints

--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -198,6 +198,9 @@ button.md-button {
     background-color: #3B5998 !important;
     color: white;
   }
+  &.white {
+    color: white !important;
+  }
 }
 
 md-icon.md-default-theme {
