--- a/src/elsie.store/templates/store.jade
+++ b/src/elsie.store/templates/store.jade
@@ -4,9 +4,7 @@ doctype
     .image
     md-toolbar.lower
       .md-toolbar-tools
-  md-button.md-fab(aria-label="Add to Watchlist",ng-click="showSessionMessage()",ng-if="!session")
-    md-icon home
-  md-button.md-fab(aria-label="Add to Watchlist",ng-click="makeHome(store)",ng-if="session")
+  md-button.md-fab#md-fab(aria-label="Add to Watchlist",ng-click="setHomeStore(store)")
     md-icon home
   md-content.lower.md-default.md-primary-bg
     div(flex="row",layout-wrap)
