--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -13,6 +13,12 @@
   transition: background-position-y $transition;
   .image {
     height: 244px;
+    @media only screen 
+    and (min-device-width : 414px) 
+    and (max-device-width : 736px) 
+    and (orientation : portrait) {
+      height: 310px;
+    }
   }
   md-toolbar.lower {
     @include gradient(rgba(255,255,255,0), rgba(0,0,0,0.15));
@@ -53,7 +59,7 @@
     background-color: transparent;
   }
   md-content.lower {
-    min-height: 100%;
+    min-height: 85%;
     .head {
       padding: 20px 5px;
       h2.title,
