--- a/src/elsie.store/styles/store.scss
+++ b/src/elsie.store/styles/store.scss
@@ -8,7 +8,13 @@
   top: $bump;
   left: 0;
   bottom: 0;
-  right: 0;
+  right: 0;//
+  @media only screen 
+  and (min-device-width : 414px) 
+  and (max-device-width : 736px) 
+  and (orientation : portrait) {
+    background-position-y: -16%;
+  }
   md-list {
     .md-list-item-text {
       .highlighted p {
