--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -41,8 +41,8 @@ doctype
               p Package
         md-list(flex="100")
           h4.light.black Nearest Stocked Location
-          md-progress-circular.md-accent(md-mode="indeterminate",ng-show="storesLoading")
-          md-list-item.no-button-pad.md-3-line(ng-show="!storesLoading",ng-click="loadStore(product.stores[0])",md-no-ink)
+          md-progress-circular.md-accent(md-mode="indeterminate",ng-show="storesLoading && homeLoading")
+          md-list-item.no-button-pad.md-3-line(ng-show="!storesLoading && !homeLoading",ng-click="loadStore(product.stores[0])",md-no-ink)
             .md-list-item-text
               h3 {{ product.stores[0].name }}
               p 
@@ -52,6 +52,13 @@ doctype
             .md-stat
               p {{ product.stores[0].quantity }} units
           .map(ng-style="map",ng-click="loadStore(product.stores[0])",md-no-ink)
+        md-list.naked(flex="100",ng-if="!storesLoading && !homeLoading && product.home")
+          md-list-item.no-button-pad.md-3-line(ng-show="!storesLoading && !homeLoading && product.home",ng-click="loadStore(product.home)",md-no-ink)
+            .md-list-item-text
+              h3 {{ home.name }}
+              p Currently set as your home store
+            .md-stat
+              p {{ product.home.quantity }} units
         md-list(flex="100",ng-if="product.tasting_note")
           md-list-item.md-3-line
             .md-list-item-text
