--- a/src/elsie.product/styles/product.scss
+++ b/src/elsie.product/styles/product.scss
@@ -84,6 +84,12 @@
       width: 100%;
       height: 132px;
       background-size: 100%;
+      margin-bottom: 7px;
+    }
+    .home-store {
+      md-list-item.md-3-line, md-list-item.md-3-line > .md-no-style {
+        min-height: 0;
+      }
     }
     md-list {
       border-top: 1px $grey solid;
