--- a/src/elsie.core/styles/settings.scss
+++ b/src/elsie.core/styles/settings.scss
@@ -1,9 +1,17 @@
 .settings {
-  padding-top: 80px;
+  padding-top: 78px;
   width: 100%;
   height: 100%;
   > md-content {
     height: 100%;
     background-color: white;
+    padding-bottom: 78px;
+    box-sizing: border-bottom;
+    h5.section-title {
+      margin: 20px 3px;
+    }
+    md-progress-circular {
+      margin: 40px auto 0;
+    }
   }
 }
