--- a/src/elsie.core/templates/settings.jade
+++ b/src/elsie.core/templates/settings.jade
@@ -1,28 +1,31 @@
 .settings
   md-content(layout="row",layout-wrap)
     md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!loaded")
-    div(layout="column",flex="90",flex-offset="5",ng-show="loaded")
-      h5.section-title.light.md-accent.upcase Profile
-      md-input-container
-        label First name
-        input(type="text",ng-model="profile.firstName")
-      md-input-container
-        label Last name
-        input(type="text",ng-model="profile.lastName")
-    md-divider(ng-show="loaded")
-    div(layout="column",flex="90",flex-offset="5",ng-show="loaded")
-      h5.section-title.light.md-accent.upcase Facebook
-      h4.light.black Status:&nbsp;
-        span(ng-if="facebook") Connected
-        span(ng-if="!facebook") Not connected
-      md-button(ng-if="!facebook",ng-click="link()") Connect
-      //p(ng-if="!facebook") Elsie uses Facebook to connect you with friends to share suggested products with.
-    //md-divider(ng-show="loaded")
-    //div(layout="column",flex="90",flex-offset="5",ng-show="loaded")
-      h5.section-title.light.md-accent.upcase Notifications
-      md-checkbox(ng-model="settings.notifications") Enabled
-    md-divider(ng-show="loaded")
-    div(layout="column",flex="90",flex-offset="5",ng-show="loaded")
-      h5.section-title.light.md-accent.upcase Home Store
-      h4.light.black(ng-if="settings.home") {{ home.name }}
-      h4.light.black(ng-if="!settings.home") Not set
+    md-list(flex="90",flex-offset="5",ng-show="loaded")
+      md-list-item.md-2-line
+        .md-list-item-text
+          h3 Profile
+          p {{ profile.firstName }} {{ profile.lastName }}
+          //- md-input-container
+          //-   label First name
+          //-   input(type="text",ng-model="profile.firstName")
+          //- md-input-container
+          //-   label Last name
+          //-   input(type="text",ng-model="profile.lastName")
+      md-list-item.md-2-line(ng-click="link()")
+        .md-list-item-text
+          h3 Facebook account
+          p
+            span(ng-if="facebook") Connected
+            span(ng-if="!facebook") Not connected
+        md-icon(ng-if="!facebook") sync
+        //p(ng-if="!facebook") Elsie uses Facebook to connect you with friends to share suggested products with.
+      //md-divider(ng-show="loaded")
+      //div(layout="column",flex="90",flex-offset="5",ng-show="loaded")
+        h5.section-title.light.md-accent.upcase Notifications
+        md-checkbox(ng-model="settings.notifications") Enabled
+      md-list-item.md-2-line(ng-click="loadHomeStore()")
+        .md-list-item-text
+          h3 Home store
+          p(ng-if="settings.store") {{ settings.store.name }}
+          p(ng-if="!settings.store") Not set
