update: final QA

--- a/src/elsie.core/templates/master.jade
+++ b/src/elsie.core/templates/master.jade
@@ -53,3 +53,4 @@ doctype
             p
               | {{ product.pick.rating }} 
               md-icon.md-accent star_rate
+        md-list-item.no-button-pad(ng-click="go('picks')") Explore all kwäf picks
