--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -143,6 +143,10 @@ a:visited {
   overflow-x: hidden;
 }
 
+img {
+  max-width: 100%;
+}
+
 img.user-image {
   width: 36px;
   border-radius: 100px;
@@ -407,11 +411,31 @@ md-tab-item {
   }
 }
 
+.standard {
+  padding-top: $bump + 56px;
+  width: 100%;
+  height: 100%;
+  background-color: $cream;
+  > md-content {
+    height: 100%;
+    background-color: $cream;
+    padding-bottom: $bump + 56px;
+    box-sizing: border-box;
+    md-progress-circular {
+      margin: 40px auto 0;
+    }
+    md-list {
+      margin-top: 0;
+    }
+  }
+}
+
 @import 'action-bar';
 @import '../../elsie.product/styles/product';
 @import '../../elsie.store/styles/store';
 @import '../../elsie.core/styles/home';
 @import '../../elsie.core/styles/watchlist';
 @import '../../elsie.core/styles/settings';
+@import '../../elsie.core/styles/about';
 @import '../../elsie.search/styles/search';
 @import '../../elsie.splash/styles/splash';
