--- a/src/elsie.common/templates/side-bar.jade
+++ b/src/elsie.common/templates/side-bar.jade
@@ -16,7 +16,7 @@ div
       md-list-item.md-with-secondary(md-ink-ripple,ng-click="logout()",ng-show="session")
         md-icon power_settings_new
         p.black Log out
-      //md-divider
-      //md-list-item.md-with-secondary(md-ink-ripple)
+      md-divider
+      md-list-item.md-with-secondary(md-ink-ripple,ng-click="go('about')")
         md-icon info
         p.black About
