--- a/src/elsie.core/templates/watchlist.jade
+++ b/src/elsie.core/templates/watchlist.jade
@@ -21,7 +21,11 @@ doctype
         img.watchlist-image(src="img/watchlist.png")
         p.message Please sign in to use this feature - it's free!
         md-button.md-primary(ng-click="go('welcome')") Okay
-      div(flex,ng-if="watchlist && watchlist.length === 0 && !error && session",layout="column", layout-align="center center")
+      div(flex,ng-if="watchlist && watchlist.length === 0 && !error && session && !legacyWatchlistExists",layout="column", layout-align="center center")
         img.watchlist-image(src="img/watchlist.png")
         p.message You haven't added anything to your watchlist yet!
         md-button.md-primary(ng-click="go('home')") Search for products
+      div(flex,ng-if="watchlist && watchlist.length === 0 && !error && session && legacyWatchlistExists",layout="column", layout-align="center center")
+        img.watchlist-image(src="img/watchlist.png")
+        p.message Your watchlist needs to be migrated! We can do that now if you'd like.
+        md-button.md-primary(ng-click="importLegacyWatchlistData()") Migrate watchlist data
