--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -40,7 +40,6 @@ doctype
                 span {{ product.package_unit_volume_in_milliliters  }}ml
               p Package
         md-list(flex="100")
-          //h4.light.black Nearest Stocked Location
           md-progress-circular.md-accent(md-mode="indeterminate",ng-show="storesLoading && homeLoading")
           md-list-item.no-button-pad.md-3-line(ng-show="!storesLoading && !homeLoading",ng-click="loadStore(product.stores[0])",md-no-ink)
             .md-list-item-text
@@ -51,6 +50,7 @@ doctype
                 span {{ product.stores[0].distance_in_meters | distance }} away
             .md-stat
               p {{ product.stores[0].quantity }} units
+          md-list-item.no-button-pad(ng-click="go('storesWithProduct')") View all nearby stores
           .map(ng-style="map",ng-click="loadStore(product.stores[0])",md-no-ink)
         md-list.home-store(flex="100",ng-if="!storesLoading && !homeLoading && product.home")
           md-list-item.no-button-pad.md-3-line(ng-show="!storesLoading && !homeLoading && product.home",ng-click="loadStore(product.home)",md-no-ink)
