--- a/src/elsie.store/styles/store.scss
+++ b/src/elsie.store/styles/store.scss
@@ -22,6 +22,14 @@
     background-position-y: -16%;
   }
   md-list {
+    .md-list-item-inner {
+      > .md-avatar {
+        height: 40px;
+        margin-left: 0;
+        max-width: 100%;
+        width: 40px;
+      }
+    }
     .md-list-item-text {
       .highlighted p {
         color: $pink;
